Revision history for Twitter::API

{{$NEXT}}
  - upload_media accepts positional params media or media_data

0.0102  2016-12-05 08:44:19 PST (TRIAL RELEASE)
  - fix invalidate_token
  - more documentation
  - reworked Twitter::API::Utils - timestamp methods now return time (epoch
    seconds), gmtime, and localtime, resectively

0.0101  2016-12-03 20:13:21 PST (TRIAL RELEASE)
  - documented trait ApiMethods
  - fixed broken ApiMethods methods and the test that wasn't catching them

0.0100  2016-12-02 13:32:27 PST (TRIAL RELEASE)
  - initial release